# FlowAI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HARNESS_ROADMAP.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_durable_execution.py  003_workflow_versioning.py  004_benchmark_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  metrics.py  rate_limiter.py  telemetry.py
backend/app/api/: auth.py  benchmarks.py  circuit_breakers.py  executions.py  health.py  knowledge.py  llm_config.py  mcp_tools.py  node_types.py  skills.py  workflow_versions.py  workflows.py
backend/app/engine/: __init__.py  checkpoint.py  circuit_breaker.py  cleanup.py  dag_engine.py  dag_parser.py  engine_selector.py  execution_context.py  langgraph_engine.py  models.py  recovery_worker.py  tracing.py  workflow_config_parser.py
backend/app/middleware/: correlation.py
backend/app/models/: __init__.py  agent.py  benchmark.py  execution.py  knowledge.py  llm_config.py  mcp.py  workflow.py  workflow_version.py
backend/app/schemas/: auth.py  benchmark.py  common.py  execution.py  knowledge.py  llm_config.py  mcp_tools.py  skills.py  workflow.py  workflow_version.py
backend/app/services/: auth_service.py  benchmark_service.py  execution_comparison_service.py  (+7 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_dag_engine.py  test_rate_limiter.py
(+39 files in other folders)
