[project]
name = "flowagent-backend"
version = "1.0.0"
description = "FlowAI - AI workflow orchestration platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "alembic>=1.13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "redis[hiredis]>=5.0",
    "boto3>=1.34",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
